# NullspaceAudio

./: .gitignore  CMakeLists.txt  a  profile_perf.sh  teaching.md
.cache/clangd/index/: DoubleBufferSPSC.h.47A228583DA6063F.idx  IIRFilter.h.C9BB6F5FEC00A487.idx  LPButterworthCoeff.h.32A96B8264937C1B.idx  LinearSystem.h.7F3092A48F5C7F4E.idx  RingBuffer.h.155E9A7E63C6E957.idx  audio_source.cpp.BB28349E3FB58D48.idx  audio_source.h.7BF0F58BF47E7C02.idx  dsp_config.h.AEFE179E9FA3FEC1.idx  dsp_interface.cpp.5574AA330477B974.idx  dsp_interface.h.FC51FA19C286C797.idx  main.cpp.0039F67C4717A0F6.idx  portaudio_stream.cpp.C36E2530D110868A.idx  portaudio_stream.h.89C59F0B6D456AA2.idx  test_double_buffer_spsc.cpp.33694B25F15EA6A7.idx  test_dsp_interface.cpp.86D9A976C586DCDE.idx  test_harness.h.5303DB0196F011BA.idx  test_iir_filter.cpp.960170962B7BDC0A.idx  test_linear_system.cpp.D9F0B8BADF531D49.idx  test_lp_butterworth.cpp.43E0E616566249EA.idx  test_ring_buffer.cpp.2F928360BAA9E759.idx  test_wav_writer.cpp.F8434C067A812064.idx  wav_file_source.cpp.ACA2751C34859EF1.idx  wav_file_source.h.0D2A92D2659B9E3C.idx  wav_writer.cpp.905EB032EF21F36E.idx  wav_writer.h.C52426CC921078D5.idx
lib/: CMakeLists.txt  audio_source.cpp  audio_source.h  dsp_config.h  dsp_interface.cpp  dsp_interface.h  plan.md  portaudio_stream.cpp  wav_file_source.cpp  wav_file_source.h  wav_writer.cpp  wav_writer.h
lib/archive/: portaudio_stream.h
lib/utils/: BoundedQueue.h  DoubleBufferSPSC.h  FastLinearSystem.h  LPButterworthCoeff.h  LinearSystem.h
src/: CMakeLists.txt  anc.cpp  anc.h  main.cpp
tests/: CMakeLists.txt  test_dsp_interface.cpp  test_harness.h  test_iir_filter.cpp  test_linear_system.cpp  test_lp_butterworth.cpp  test_ring_buffer.cpp  test_wav_writer.cpp
